Fix z-index issue

--- a/scss/_dialog.scss
+++ b/scss/_dialog.scss
@@ -109,3 +109,11 @@
     }
   }
 }
+
+.modal-backdrop {
+  z-index: 1040;
+}
+
+.modal-dialog {
+  z-index: 1041;
+}
